[package]
name = "ffi-guy"
version = "0.0.2"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "An attribute macro to automatically make functions FFI safe."
license = "MIT OR Apache-2.0" # Standard Rust open-source licenses
repository = "https://github.com"
readme = "README.md"

[dependencies]
syn = { version = "2.0", features = ["full"]}
quote = "1.0"

[lib]
proc-macro = true