[package]
name = "ffi-guy"
version = "0.0.2"
edition = "2024"
authors = ["Spypie60 <juliuseao@gmail.com>"]
description = "An attribute macro to automatically make functions FFI safe."
license = "MIT"
repository = "https://github.com/Spypie60/ffi-guy"
readme = "README.md"

[dependencies]
syn = { version = "2.0", features = ["full"]}
quote = "1.0"

[lib]
proc-macro = true